--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ body {
     padding: 0;
     margin: 0;
 }
+
 /*--- start ---*/
 .container {
     display: flex;
@@ -30,6 +31,7 @@ body {
     font-size: 32px;
     font-weight: bold;
 }
+
 /* -- style of lable and input --*/
 .input label,
 input {
@@ -106,6 +108,10 @@ input[type=submit] {
 .col-r form {
     max-width: 100%;
     margin: 0 auto;
+}
+
+a {
+    color: rgba(17, 17, 17, 1);
 }
 
 /*--- media --*/
